--- a/index.css
+++ b/index.css
@@ -21,18 +21,27 @@
     list-style: none;
 }
 
+.nav-items > ul > button {
+    color: white;
+    background-color: maroon;
+    height: 30px;
+    margin-top: 13px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
 .body {
     border: 1px solid black;
     margin: 10px 0;
 }
 
-.search-bar {
+.actions {
     display: flex;
     margin: 10px;
     justify-content: center;
 }
 
-.search-bar button {
+.actions button {
     margin: 0 10px;
 }
 
@@ -40,6 +49,20 @@
     display: flex;
     flex-wrap: wrap;
     margin: 10px 0;
+}
+
+.shimmer-container {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 10px 0;
+}
+
+.shimmer-card{
+    background-color: #f0f0f0;
+    height: 350px;
+    width: 210px;
+    padding: 5px;
+    margin: 10px;
 }
 
 .res-card {
@@ -58,4 +81,5 @@
 
 .res-card-logo {
     width: 100%;
+    height: 160px;
 }
