--- a/index.css
+++ b/index.css
@@ -18,7 +18,12 @@
 .nav-items > ul > li {
     padding: 10px;
     margin: 10px;
+    cursor: pointer;
     list-style: none;
+}
+
+.nav-items > ul > li > a {
+    text-decoration: none;
 }
 
 .nav-items > ul > button {
@@ -31,6 +36,7 @@
 }
 
 .body {
+    background: lightcyan;
     border: 1px solid black;
     margin: 10px 0;
 }
@@ -49,6 +55,11 @@
     display: flex;
     flex-wrap: wrap;
     margin: 10px 0;
+}
+
+.res-container > a {
+    color: black;
+    text-decoration: none;
 }
 
 .shimmer-container {
@@ -82,4 +93,15 @@
 .res-card-logo {
     width: 100%;
     height: 160px;
+}
+
+.post-container {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin: 10px;
+    padding: 10px;
+    height: 200px;
+    border: 1px solid coral;
+    box-shadow: 5px 10px 18px lightcoral;
 }
