--- a/index.css
+++ b/index.css
@@ -105,3 +105,33 @@
     border: 1px solid coral;
     box-shadow: 5px 10px 18px lightcoral;
 }
+
+.user-details {
+    height: 400px;
+    width: 300px;
+    border: 1px solid black;
+    padding: 10px;
+}
+
+.user-details > img {
+    width: 200px;
+    height: 200px;
+}
+
+.user-details > .increase {
+    color: white;
+    margin: 5px;
+    border-radius: 5px;
+    cursor: pointer;
+    background-color: green;
+    height: 30px;
+}
+
+.user-details > .decrease {
+    color: white;
+    margin: 5px;
+    border-radius: 5px;
+    cursor: pointer;
+    background-color: red;
+    height: 30px;
+}
