--- a/index.css
+++ b/index.css
@@ -1,141 +1,3 @@
-.header {
-    display: flex;
-    justify-content: space-between;
-    border: 1px solid black;
-    background: lightgray;
-}
-
-.logo {
-    width: 100px;
-    margin: 10px;
-}
-
-.nav-items > ul {
-    display: flex;
-    padding: 0 20px;
-}
-
-.nav-items > ul > li {
-    padding: 10px;
-    margin: 10px;
-    cursor: pointer;
-    list-style: none;
-}
-
-.nav-items > ul > .status {
-    cursor: unset;
-}
-
-.nav-items > ul > li > a {
-    text-decoration: none;
-}
-
-.nav-items > ul > button {
-    color: white;
-    background-color: maroon;
-    height: 30px;
-    margin-top: 13px;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-.body {
-    background: lightcyan;
-    border: 1px solid black;
-    margin: 10px 0;
-}
-
-.actions {
-    display: flex;
-    margin: 10px;
-    justify-content: center;
-}
-
-.actions button {
-    margin: 0 10px;
-}
-
-.res-container {
-    display: flex;
-    flex-wrap: wrap;
-    margin: 10px 0;
-}
-
-.res-container > a {
-    color: black;
-    text-decoration: none;
-}
-
-.shimmer-container {
-    display: flex;
-    flex-wrap: wrap;
-    margin: 10px 0;
-}
-
-.shimmer-card{
-    background-color: #f0f0f0;
-    height: 350px;
-    width: 210px;
-    padding: 5px;
-    margin: 10px;
-}
-
-.res-card {
-    background-color: beige;
-    height: 350px;
-    width: 210px;
-    padding: 5px;
-    margin: 10px;
-}
-
-.res-card:hover {
-    border: 1px solid coral;
-    box-shadow: 5px 10px 18px lightcoral;
-    cursor: pointer;
-}
-
-.res-card-logo {
-    width: 100%;
-    height: 160px;
-}
-
-.post-container {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    margin: 10px;
-    padding: 10px;
-    height: 200px;
-    border: 1px solid coral;
-    box-shadow: 5px 10px 18px lightcoral;
-}
-
-.user-details {
-    height: 400px;
-    width: 300px;
-    border: 1px solid black;
-    padding: 10px;
-}
-
-.user-details > img {
-    width: 200px;
-    height: 200px;
-}
-
-.user-details > .increase {
-    color: white;
-    margin: 5px;
-    border-radius: 5px;
-    cursor: pointer;
-    background-color: green;
-    height: 30px;
-}
-
-.user-details > .decrease {
-    color: white;
-    margin: 5px;
-    border-radius: 5px;
-    cursor: pointer;
-    background-color: red;
-    height: 30px;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
